--- a/style.css
+++ b/style.css
@@ -11,25 +11,25 @@
  
 
   body {   
-    font-size: 16px;
-    font-family: sans-serif;
+    font-size: 18px;
+    font-family: Arial, Helvetica Neue, sans-serif;
     line-height: 32px;
     display: block;
     width: 960px;
     margin: auto;
-    color: lightslategray;
+    color: #777;
   }
 
   #total {
     padding: 10px;
     margin-left: 10px;
     margin-right: 10px;
-    background-color: gray;
+    background-color: #777;
     display: block;
   }
 
   header {
-    background-color: whitesmoke;
+    background-color: #ebebeb;
     padding: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -39,7 +39,7 @@
   }
 
   #nav {
-    background-color: whitesmoke;
+    background-color: #ebebeb;
     padding: 10px;
     margin-top: 10px;
     margin-bottom: 15px;
@@ -49,7 +49,7 @@
   }
 
   #section {
-    background-color: whitesmoke;
+    background-color: #ebebeb;
     padding: 1px;
     margin-top: 10px;
     margin-bottom: 15px;
@@ -61,7 +61,7 @@
   #article {
       background-color: gray;
       color:whitesmoke;
-      padding: 30px;
+      padding: 1px;
       margin-top: -10px;
       margin-bottom: 15px;
       margin-left: 20px;
@@ -75,8 +75,8 @@
   }
 
   h3,p {
-    background-color: whitesmoke;
-    color: gray;
+    background-color: #ebebeb;
+    color: #777;
     width: 90%;
     padding: 10px;
     margin: 10px;
@@ -84,7 +84,8 @@
   }
 
   #aside {
-    background-color: whitesmoke;
+    background-color: #ebebeb;
+    ke;
     float: right;
     margin-top: 1px;
     margin-right: 100px;
@@ -94,7 +95,7 @@
   }
 
   footer {
-    background-color: whitesmoke;
+    background-color: #ebebeb;
     margin-top: 10px;
     margin-left: 100px;
     margin-right: 100px;
